# engine

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  aetherforge-designer-ai.agent.md  aetherforge-lead-director.agent.md
.cursor/rules/: aetherforge-agent-ownership.mdc
.github/workflows/: ci.yml  sdk-e2e.yml
crates/aetherforge_cli/: Cargo.toml
crates/aetherforge_cli/src/: lib.rs  player.rs  scenario.rs
crates/aetherforge_cli/tests/: player_http_loop.rs  player_no_sim_guard.rs  scenario_flagship_offline.rs  scenario_mission_offline.rs  scenario_offline.rs  scenario_tick_json.rs
crates/aetherforge_control/: Cargo.toml
crates/aetherforge_control/src/: lib.rs  play_log.rs  rate_limit.rs  server.rs
crates/aetherforge_control/tests/: http_action_quota.rs  http_concurrent.rs  http_rate_limit.rs  http_sessions.rs  nl_interpret_stub.rs  play_log_json.rs  sse_observe_stream.rs
crates/aetherforge_farm/: Cargo.toml
crates/aetherforge_farm/src/: lib.rs
crates/aetherforge_game/: Cargo.toml
crates/aetherforge_game/src/: lib.rs
crates/aetherforge_platform/: Cargo.toml
crates/aetherforge_platform/src/: lib.rs
crates/aetherforge_player/: Cargo.toml
crates/aetherforge_player/src/: lib.rs  main.rs  player.rs
crates/aetherforge_player/tests/: player_http_loop.rs  player_no_sim_guard.rs
crates/aetherforge_schemas/: Cargo.toml
crates/aetherforge_schemas/schema_fragments/: observation_farm_property.json  observation_mission_property.json  observation_world_property.json
crates/aetherforge_schemas/src/: lib.rs
crates/aetherforge_sim/: Cargo.toml
crates/aetherforge_sim/src/: lib.rs  wire.rs
docs/: aetherforge-designer-log.md  aetherforge-director-log.md  agent-master-plan.md  backlog-post-v0.1.md  demo-showcase.md  deployment-rate-limiting.md  deployment.md  director-program-roadmap.md  flagship-scenario.md  getting-started.md  nl-agentic-hooks.md  phase1a-stack-memo.md  phase1b-subsystem-architecture.md  phase1c-ai-interface-spec-v0.md  phase1c-risk-register.md  phase1d-verification.md  phase2-plan.md  phase2c-play-log.md  phase4-batch.md  phase4b-scenario.md  phase5-farm-stub.md  phase6-autonomous-player.md  phase7a-server-hardening.md  phase7b-player-graph-guard.md  phase9b-sse.md  platform-headed-roadmap.md  release-closure-checklist.md  release-v0.1.0.md  roadmap-to-complete-project.md
docs/adr/: 0001-observation-stream-transport.md  0002-player-crate-split.md  0003-deployment-tls-and-auth.md  0004-runtime-embedding.md
examples/: farm_5b_scenario.json  farm_demo_loop.json  flagship_farm_http.json  flagship_farm_two_cycles.json  nl-prompt-template.md  nl_tool_use_sdk_sample.py  scenario-min.json
python/aetherforge_sdk/: README.md  pyproject.toml
python/aetherforge_sdk/examples/: observation_hud.py  ping_observation.py
python/aetherforge_sdk/scripts/: check_observation_contract.py
python/aetherforge_sdk/src/aetherforge_sdk/: __init__.py  client.py  models.py
python/aetherforge_sdk/tests/: test_client_integration.py  test_client_mock.py
schemas/: README.md
schemas/v1/: action.schema.json  action_batch.schema.json  control_envelope.schema.json  observation.schema.json  state.schema.json
scripts/: check_player_no_sim_import.sh  check_schema_drift.py  dev_smoke.ps1  dev_smoke.sh  golden_playthrough.ps1  golden_playthrough.sh
