[package]
name = "aetherforge_cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
farm-stub = ["aetherforge_control/farm-stub"]
sse-obs = ["aetherforge_control/sse-obs"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "aetherforge_headless"
path = "src/bin/aetherforge_headless.rs"

[[bin]]
name = "aetherforge_serve"
path = "src/bin/aetherforge_serve.rs"

[[bin]]
name = "aetherforge_scenario"
path = "src/bin/aetherforge_scenario.rs"

[dependencies]
aetherforge_control = { path = "../aetherforge_control" }
aetherforge_schemas = { path = "../aetherforge_schemas" }
aetherforge_sim = { path = "../aetherforge_sim" }
axum = "0.7.9"
clap = { version = "4.5", features = ["derive"] }
rand = { version = "0.8", features = ["std_rng"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "net"] }
