[package]
name = "aetherforge_control"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
farm-stub = ["aetherforge_sim/farm-stub"]
sse-obs = ["dep:async-stream", "dep:futures-util"]
rate-limit = ["dep:governor"]
nl-interpret-stub = []

[dependencies]
async-stream = { version = "0.3", optional = true }
futures-util = { version = "0.3", default-features = false, features = ["alloc"], optional = true }
aetherforge_schemas = { path = "../aetherforge_schemas" }
aetherforge_sim = { path = "../aetherforge_sim" }
axum = { version = "0.7.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["sync", "macros", "rt-multi-thread", "net", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
rand = "0.8"
governor = { version = "0.7", optional = true }

[dev-dependencies]
tracing = "0.1"
http-body-util = "0.1"
hyper = { version = "1.5", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
bytes = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }

[[test]]
name = "nl_interpret_stub"
required-features = ["nl-interpret-stub"]
