[package]
name = "aetherforge_platform"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
headed-smoke = ["dep:wgpu"]
# `aetherforge_sim/farm-stub`: in-window demo uses the same plant→grow→harvest intents as `farm_demo_loop`.
windowed = [
    "dep:wgpu",
    "dep:winit",
    "dep:pollster",
    "dep:font8x8",
    "dep:bytemuck",
    "aetherforge_sim/farm-stub",
]

[[bin]]
name = "aetherforge_wgpu_smoke"
path = "src/bin/wgpu_smoke.rs"
required-features = ["headed-smoke"]

[[bin]]
name = "aetherforge_window"
path = "src/bin/window.rs"
required-features = ["windowed"]

[dependencies]
aetherforge_sim = { path = "../aetherforge_sim" }
bytemuck = { version = "1.22", optional = true, features = ["derive"] }
font8x8 = { version = "0.3", optional = true, default-features = true, features = ["unicode"] }
pollster = { version = "0.4", optional = true }
wgpu = { version = "23", optional = true, default-features = true }
winit = { version = "0.30.5", optional = true }
