[package]
name = "aetherforge_player"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP-only autonomous player for the AetherForge control plane (no sim kernel dependency)"

[lib]
path = "src/lib.rs"

[[bin]]
name = "aetherforge_player"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rand = { version = "0.8", features = ["std_rng"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "net"] }

[dev-dependencies]
aetherforge_control = { path = "../aetherforge_control" }
axum = "0.7.9"
