[package]
name = "aetherforge_schemas"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
schema-export = ["dep:schemars"]

[[bin]]
name = "aetherforge_export_action_schema"
path = "src/bin/export_action_schema.rs"
required-features = ["schema-export"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", optional = true }
