[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aetherforge-sdk"
version = "0.1.0"
description = "Thin HTTP client for the AetherForge control plane (v1)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "AetherForge contributors" }]
keywords = ["aetherforge", "game-engine", "httpx", "hytale-adjacent"]

[project.urls]
Homepage = "https://github.com/Chavocan/engine"
Repository = "https://github.com/Chavocan/engine"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests", "examples", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
